--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -1,20 +1,21 @@
+* {
+	font-family: 'Raleway', sans-serif;
+}
+
 main {
-	padding-top: 4.5rem;
+	padding-top: 73px;
+	line-height: 2rem;
+	background-color: #E7ECE7;
 }
 
 section{
-	background-color: #bbb;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
 }
 
 article {
-	padding-top: 1rem;
-	padding-bottom: 1rem;
-}
-
-section:nth-child(even) {
-	background-color: #ddd;
+	padding-top: 1.5rem;
+	padding-bottom: 4.5rem;
 }
 
 ul {
@@ -22,6 +23,14 @@ ul {
 	padding-left: 0;
 }
 
+a {
+	text-decoration: none;
+}
+
+.hidden {
+	display: none;
+}
+
 .m-auto {
-	margin: 0 auto;
+	margin: 0.5rem auto;
 }
