--- a/src/components/styles/projectsTile.css
+++ b/src/components/styles/projectsTile.css
@@ -2,13 +2,18 @@ ul.tech > li {
 	margin: 0.5rem;
 }
 
+article.project-tile {
+	padding-top: 1.5rem;
+	padding-bottom: 5rem;
+}
+
 .link-button {
 	font-weight: 600;
 	background-color: #003500;
 	color: white;
 	padding: 0.5rem 1.5rem;
 	border-radius: 3px;
-	transition-property: background-color, color, border;
+	transition-property: background-color, color;
 	transition-duration: 0.5s;
 }
 
@@ -19,4 +24,10 @@ ul.tech > li {
 
 .article-align {
 	padding: 0rem 2.5rem;
+}
+
+@media only screen and (max-width: 1000px) {
+	.article-align {
+		padding: 0rem;
+	}
 }
