--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -1,5 +1,6 @@
 * {
-	font-family: 'Raleway', sans-serif;
+	/*font-family: 'Open Sans', sans-serif;*/
+	font-family: 'Inconsolata', monospace;
 }
 
 main {
@@ -9,13 +10,8 @@ main {
 }
 
 section{
-	padding-top: 1rem;
-	padding-bottom: 1rem;
-}
-
-article {
-	padding-top: 1.5rem;
-	padding-bottom: 4.5rem;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
 }
 
 ul {
@@ -25,6 +21,15 @@ ul {
 
 a {
 	text-decoration: none;
+}
+
+p {
+	font-family: 'Open Sans', sans-serif;
+}
+
+img.avatar {
+	height: auto;
+	width: 400px;
 }
 
 .hidden {
