--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -1,6 +1,5 @@
 * {
-	/*font-family: 'Open Sans', sans-serif;*/
-	font-family: 'Inconsolata', monospace;
+	font-family: 'Open Sans', sans-serif;
 }
 
 main {
@@ -25,6 +24,7 @@ a {
 
 p {
 	font-family: 'Open Sans', sans-serif;
+	text-align: justify;
 }
 
 img.avatar {
