change of styling for UX improvements

--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -3,7 +3,9 @@
 }
 
 main {
-	padding-top: 73px;
+	padding-top: 60px;
+	padding-left: 1rem;
+	padding-right: 1rem;
 	line-height: 2rem;
 	background-color: #E7ECE7;
 }
@@ -38,4 +40,16 @@ img.avatar {
 
 .m-auto {
 	margin: 0.5rem auto;
+}
+
+span.nav-spacing {
+	display: block;
+	margin-top: 50px;
+}
+
+@media only screen and (max-width: 1000px) {
+	main {
+		padding-left: 0rem;
+		padding-right: 0rem;
+	}
 }
