--- a/src/components/styles/projectsTile.css
+++ b/src/components/styles/projectsTile.css
@@ -4,17 +4,19 @@ ul.tech > li {
 
 article.project-tile {
 	padding-top: 1.5rem;
-	padding-bottom: 5rem;
+	padding-bottom: 1.5rem;
+	margin-bottom: 5rem;
 }
 
 .link-button {
+	min-width: 5rem;
 	font-weight: 600;
 	background-color: #003500;
 	color: white;
-	padding: 0.5rem 1.5rem;
+	padding: 0.25rem 1rem;
 	border-radius: 3px;
 	transition-property: background-color, color;
-	transition-duration: 0.5s;
+	transition-duration: 0.5s;	
 }
 
 .link-button:hover {
@@ -28,6 +30,7 @@ article.project-tile {
 
 @media only screen and (max-width: 1000px) {
 	.article-align {
-		padding: 0rem;
+		font-size: small;
+		padding: 0 1rem;
 	}
 }
