--- a/src/components/styles/nav.css
+++ b/src/components/styles/nav.css
@@ -3,7 +3,7 @@ nav {
     font-size: 22px;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-    background-color: #003500;
+    background-color: #2e3838;
     z-index: 10;
 }
 
