--- a/src/components/styles/contact.css
+++ b/src/components/styles/contact.css
@@ -1,5 +1,5 @@
 a.contact-link > i {
-	color: #003500;
+	color: #2e3838;
 	transition: color 0.5s linear;
 }
 
@@ -8,7 +8,7 @@ a.contact-link > i:hover {
 }
 
 a.contact-link:visited {
-	color: #003500;
+	color: #2e3838;
 }
 
 li.contact-email {
