--- a/src/components/styles/projectsTile.css
+++ b/src/components/styles/projectsTile.css
@@ -1,17 +1,27 @@
-ul.tech > li {
-	margin: 0.5rem;
-}
-
 article.project-tile {
+	background-color: #E7ECE7;
+	border-radius: 5px;
 	padding-top: 1.5rem;
 	padding-bottom: 1.5rem;
 	margin-bottom: 5rem;
 }
 
+div.tile-head, div.img-wrapper {
+	padding: 1rem 2.5rem;
+}
+
+div.img-wrapper > a > img {
+	width: 100%;
+}
+
+ul.links > li {
+	margin: 0.5rem;
+}
+
 .link-button {
 	min-width: 5rem;
 	font-weight: 600;
-	background-color: #003500;
+	background-color: #2e3838;
 	color: white;
 	padding: 0.25rem 1rem;
 	border-radius: 3px;
@@ -29,6 +39,14 @@ article.project-tile {
 }
 
 @media only screen and (max-width: 1000px) {
+	article.project-tile {
+		border-radius: 0;
+	}
+
+	div.img-wrapper {
+		padding: 1rem;
+	}
+
 	.article-align {
 		font-size: small;
 		padding: 0 1rem;
