--- a/src/components/styles/projectsTile.css
+++ b/src/components/styles/projectsTile.css
@@ -9,7 +9,7 @@ article.project-tile {
 div.tile-head {
 	margin-left: 2.5rem;
 	padding: 0.5rem 1rem;
-	border-left: 5px solid #FFB732;
+	border-left: 5px solid #eb6a07;
 }
 
 div.img-wrapper {
@@ -43,34 +43,37 @@ ul.links > li {
 
 .link-button {
 	min-width: 5rem;
+	letter-spacing: 1px;
+	font-size: larger;
 	font-weight: 600;
-	background-color: #FFB732;
-	/*border: 5px solid #FFB732;*/
-	color: #003500;
+	color: #eb6a07;
 	padding: 0.25rem 1rem;
-	border-radius: 3px;
-	transition: all 0.7s ease;
-	/*transition-property: background-color, border;
-	transition-duration: 0.5s;
-	transition-timing-function: ease-in-out;*/
+	transition: all 0.5s ease-out 0s;
+	position: relative;
+	z-index: 2;
+	outline: 2.5px solid #eb6a07;
+	text-transform: uppercase;
 }
 
 .link-button:hover {
-/*	background-color: #2e3838;
+	box-shadow: none;
 	color: white;
-	background-color: white;
-	border-bottom: 5px solid #2e3838;
-	border-left: none;
-	border-bottom: 5px solid #2e3838;
-	border-top: none;
-	border-right: none;
-	transition-property: background-color, border;
-	transition-duration: 0.5s;
-	transition-timing-function: ease-in-out;*/
-	/*border: 2px solid rgba(0,160,80,0);
-  	color: #FFF;*/
-  	box-shadow: inset 0 0 0 3px #2e3838;
-  	background-color: white; 
+}
+
+.link-button::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 0px;
+	height: 100%;
+	background-color: #eb6a07;
+	transition: all 0.5s ease-out 0s;
+	z-index: -1;
+}
+
+.link-button:hover::after {
+  	width: 100%;
 }
 
 .article-align {
@@ -84,6 +87,10 @@ ul.links > li {
 
 	div.tile-head {
 		margin-left: 1rem;
+	}
+
+	ul.tech > li {
+		font-size: small;
 	}
 
 	div.img-wrapper {
