Change to styling based on user feedback
-increase of tech list size to make items more noticeable
-add of info to bio section
-change of spacing and hover color in nav element
-change of footer element to align better with overall styling

--- a/src/components/styles/nav.css
+++ b/src/components/styles/nav.css
@@ -1,6 +1,6 @@
 nav {
 	text-align: center;
-    font-size: 22px;
+    font-size: 20px;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     background-color: #2e3838;
@@ -12,7 +12,8 @@ div.nav-bar {
 	display: flex;
     align-items: center;
     align-content: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 3rem;
 }
 
 nav li {
@@ -26,11 +27,15 @@ nav i {
 
 nav a {
 	color: white;
+	transition: color 0.5s;
+}
+
+nav a:hover {
+	color: #eb6a07;
 }
 
 nav a:visited {
 	text-decoration: none;
-	color: white;
 }
 
 .menu-drop {
@@ -41,7 +46,6 @@ nav a:visited {
 .nav-profile {
 	font-size: 30px;
 	color: white;
-	float: left;
 	transition: color 0.5s;
 }
 
