--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -25,11 +25,15 @@ a {
 p {
 	font-family: 'Open Sans', sans-serif;
 	text-align: justify;
+	font-size: 18px;
 }
 
 img.avatar {
+	display: block;
+	margin: 0 auto;
 	height: auto;
-	width: 400px;
+	width: 250px;
+	border-radius: 50%;
 }
 
 div.project-row {
@@ -58,6 +62,13 @@ h2.project-head {
 	text-transform: uppercase;
 }
 
+div.project-row > section.row {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
 .hidden {
 	display: none;
 }
@@ -80,5 +91,13 @@ span.nav-spacing {
 	div.project-row .row {
 		padding-left: 0;
 		padding-right: 0;
+	}
+
+	img.avatar {
+		width: 200px;
+	}
+
+	p {
+		font-size: 15px;
 	}
 }
