--- a/src/components/styles/nav.css
+++ b/src/components/styles/nav.css
@@ -1,11 +1,8 @@
 nav {
 	text-align: center;
     font-size: 20px;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    background-color: #2e3838;
-    border-bottom: 1px solid #E7ECE7;
-    z-index: 10;
+    padding: 4rem 4rem 0 4rem;
+    background-color: aliceblue;
 }
 
 div.nav-bar {
@@ -13,7 +10,6 @@ div.nav-bar {
     align-items: center;
     align-content: center;
     justify-content: space-between;
-    padding: 0 3rem;
 }
 
 nav li {
@@ -26,7 +22,7 @@ nav i {
 }
 
 nav a {
-	color: white;
+	color: black;
 	transition: color 0.5s;
 }
 
@@ -45,10 +41,18 @@ nav a:visited {
 
 .nav-profile {
 	font-size: 30px;
-	color: white;
+	color: black;
 	transition: color 0.5s;
 }
 
 .nav-profile:hover {
 	color: #eb6a07;
+}
+
+@media only screen and (max-width: 1000px) {
+	nav {
+		font-size: 20px;
+    	padding: 3rem 2rem 0 2rem;
+	}
+
 }
