--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -4,7 +4,6 @@
 
 main {
 	line-height: 1.75rem;
-	background-color: aliceblue;
 }
 
 section{
@@ -36,7 +35,7 @@ img.avatar {
 }
 
 div.project-row {
-	background-color: #2e3838;
+	background-color: cornflowerblue;
 	position: relative;
 	z-index: 1;
 }
@@ -79,6 +78,24 @@ div.project-row > section.row {
 span.nav-spacing {
 	display: block;
 	margin-top: 50px;
+}
+
+div.parallax-wrapper {
+	perspective: 1px;
+	transform-style: preserve-3d;
+	height: 100vh;
+	overflow-x: hidden;
+}
+
+div.parallax {
+	display: flex;
+	position: relative;
+	z-index: -2;
+	height: 100vh;
+	justify-content: baseline;
+	align-items: center;
+	transform: translateZ(-1px) scale(2);
+	background-color: aliceblue;
 }
 
 @media only screen and (max-width: 1000px) {
