--- a/src/components/styles/nav.css
+++ b/src/components/styles/nav.css
@@ -1,8 +1,23 @@
 nav {
 	text-align: center;
     font-size: 20px;
-    padding: 4rem 4rem 0 4rem;
-    background-color: aliceblue;
+    padding: 2rem 4rem 2rem 4rem;
+    background-color: lightgoldenrodyellow;
+}
+
+nav:after {
+	background-color: inherit;
+	top: 0;
+	content: '';
+	display: block;
+	height: 35%;
+	left: 0;
+	position: absolute;
+	right: 0;
+	transform: skewY(18deg);
+	transform-origin: 100% 100%;
+	z-index: -1;
+
 }
 
 div.nav-bar {
@@ -24,6 +39,7 @@ nav i {
 nav a {
 	color: black;
 	transition: color 0.5s;
+	z-index: 1;
 }
 
 nav a:hover {
@@ -54,5 +70,4 @@ nav a:visited {
 		font-size: 20px;
     	padding: 3rem 2rem 0 2rem;
 	}
-
 }
