change to mobile layout and color of highlighted text

--- a/src/components/styles/nav.css
+++ b/src/components/styles/nav.css
@@ -71,3 +71,9 @@ nav a:visited {
     	padding: 3rem 2rem 0 2rem;
 	}
 }
+
+@media only screen and (min-width: 1700px) {
+	nav:after {
+		height: 80%;
+	}
+}
