--- a/src/components/styles/projectsTile.css
+++ b/src/components/styles/projectsTile.css
@@ -36,7 +36,7 @@ div.img-wrapper > a > img:hover {
 
 ul.tech > li {
 	margin-bottom: 0.5rem;
-    color: white;
+    color: coral;
     padding-right: 0.5rem;
     font-weight: 600;
     font-size: large;
