--- a/src/components/styles/projectsTile.css
+++ b/src/components/styles/projectsTile.css
@@ -7,6 +7,7 @@ article.project-tile {
 	padding-top: 1.5rem;
 	padding-bottom: 1.5rem;
 	margin-bottom: 5rem;
+	box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.5);
 }
 
 div.tile-head {
