--- a/src/components/styles/intro.css
+++ b/src/components/styles/intro.css
@@ -7,10 +7,6 @@ header.intro {
 	padding: 2rem;
 }
 
-header.intro > h3 {
-	font-size: 13px;
-}
-
 h2.intro {
 	font-size: 16px;
 	line-height: 1.5;
@@ -21,18 +17,14 @@ span.highlight {
 	color: coral;
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1020px) {
 	header.intro {
-		width: 50%;
+		width: 55%;
 		padding: 4rem;
 		height: 80vh;
 	}
 
-	header.intro > h3 {
-		font-size: 18px;
-	}
-
 	h2.intro {
-		font-size: 26px;
+		font-size: calc(100vw / 60);
 	}
 }
